fix: Request - use proper line-height and letter-spacing for notices

--- a/client/src/pages/scss/request.scss
+++ b/client/src/pages/scss/request.scss
@@ -26,6 +26,8 @@
       font-size: 20px;
       margin: 10px 0 0;
       font-weight: 300;
+      letter-spacing: 1.25px;
+      line-height: 1.25;
 
       &:first-of-type {
         margin: 25px 0 0;
